# MyVPN

./: .gitignore  README.md  servers.csv
.github/workflows/: release.yml  servers.yml
app/: index.html  package-lock.json  package.json
app/scripts/: fetch-wintun.ps1
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/openvpn/: placeholder.txt
app/src-tauri/src/: commands.rs  error.rs  lib.rs  state.rs
app/src-tauri/src/public_vpn/: mod.rs  openvpn.rs  sources.rs
app/src-tauri/src/vpn/: discovery.rs  iroh_transport.rs  mod.rs  net.rs  tun.rs
app/src/components/: ErrorBoundary.tsx  Sidebar.tsx  StatusOrb.tsx  ThroughputMeter.tsx
app/src/components/ui/: Button.tsx  TextField.tsx  Toggle.tsx
app/src/lib/: api.ts  format.ts
app/src/screens/: ConnectScreen.tsx  Dashboard.tsx  HostScreen.tsx  PublicScreen.tsx  SettingsScreen.tsx
docs/: PUBLIC_VPN.md  RELAY.md  SIGNING.md
scripts/: fetch-openvpn.ps1  fetch-wintun.ps1
web/: package-lock.json  package.json  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/changelog/: page.tsx
web/src/components/site/: download-cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  icons.tsx  logo.tsx  navbar.tsx  release-notes.tsx  security.tsx  version.tsx
web/src/components/ui/: button.tsx  reveal.tsx
web/src/lib/: site.ts
